<?xml version="1.0"?>
<package>
  <name>robot_meta_logger</name>
  <version>0.4.0</version>
  <description>
      Logging from multiple robot frameworks in a consistent fashion, 
      with semi-automatic integration of additional sources such as 
      video-cameras, screen-captures and microphones.
  </description>
  <author email="iluetkeb@techfak.uni-bielefeld.de">Ingo Lütkebohle</author>
  <maintainer email="iluetkeb@techfak.uni-bielefeld.de">Ingo Lütkebohle</maintainer>
  <maintainer email="flier@techfak.uni-bielefeld.de">Florian Lier</maintainer>
  <url>http://opensource.cit-ec.de/projects/rml</url>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <rosdep name="python-opencv"/>
  <rosdep name="ffmpeg"/>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
